# Comfy Registry / packaging metadata.
# Publish later with `comfy node publish` (comfy-cli). Fill PublisherId first.
# Registry docs: https://docs.comfy.org/registry/overview

[project]
name = "tinode"
version = "0.0.1"
description = "Custom ComfyUI node pack."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/mgkgng/tinode"

[tool.comfy]
PublisherId = ""
DisplayName = "tinode"
Icon = ""
